add dropdown component

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "bp-vuejs-dropdown": "^2.1.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
