--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "bp-vuejs-dropdown": "^2.1.1",
+    "lodash": "^4.17.15",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
