--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "bp-vuejs-dropdown": "^2.1.1",
     "lodash": "^4.17.15",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^2.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
