--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
-    "bp-vuejs-dropdown": "^2.1.1",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.28",
     "lodash": "^4.17.15",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vuetify": "^2.0.7"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
